# ai

./: .gitignore  CLAUDE.md  claude-md-template.md  world.py  world_optimized.py
backend/: .env.example  pyproject.toml
backend/memory/: feedback_db_patterns.md
backend/seed/: seed.py
backend/seed/data/: reference.py
backend/seed/helpers/: geo.py
backend/seed/seeds/: courts.py  games.py  places.py  players.py  scores.py  teams.py
backend/src/: main.py
backend/src/assets/locales/: en.json  es.json
backend/src/common/constants/: geo.py
backend/src/common/controllers/: health_check.py
backend/src/common/environment/: config.py
backend/src/common/libraries/: database.py  email.py  hash.py  jwt.py
backend/src/common/logic/: teams.py
backend/src/common/middleware/: auth.py  error_handler.py
backend/src/common/models/: court.py  game.py  place.py  player.py  response.py  score.py  team.py
backend/src/common/routes/: router.py
backend/src/common/utilities/: color.py  geo.py  localize.py  respond.py  serialize.py
backend/src/modules/auth/controllers/: log_in.py  password.py  refresh.py  sign_up.py  social.py  verification.py
backend/src/modules/auth/logic/: log_in_logic.py  password_logic.py  sign_up_logic.py  (+2 more)
backend/test/: test.py
backend/test/tests/: test_auth_log_in.py  test_auth_password.py  test_auth_refresh.py  test_auth_sign_up.py  test_auth_social.py  test_auth_verification.py  test_courts.py  test_games.py  test_health_check.py  test_league.py  test_places.py  test_players.py  test_scores.py  test_settings.py  test_teams.py
(+365 files in other folders)
